# football-guesser

./: README.md  __init__.py  pyproject.toml
app/: __init__.py
utils/: consts.py  functions.py
