[tool.poetry]
name = "tp-algoritmia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tp_algoritmia"}]

[tool.poetry.dependencies]
python = "^3.8"
pysimplegui = "^4.60.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
